--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "tinyusb"]
 	path = lib/tinyusb
-	url = git@github.com:hathach/tinyusb.git
+	url = https://github.com/hathach/tinyusb.git
+	branch = develop
